// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Coordinator Screen Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              chevron-right.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              notifications.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="storyContent"
      >
        תוכן העמוד
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Coordinator Screen Fab 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              chevron-right.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              notifications.svg
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="storyContent"
      >
        תוכן העמוד
      </div>
    </div>
    <button
      className="MuiButtonBase-root-9 MuiFab-root-25 makeStyles-fab-24 MuiFab-extended-29 MuiFab-primary-27"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label-26"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root-35"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <div
          className="text"
        >
          הוסף תור
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Coordinator Screen Sticky Content 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              chevron-right.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              notifications.svg
            </svg>
          </span>
        </button>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          style={
            Object {
              "padding": 10,
            }
          }
        >
           חלק דביק בראש העמוד
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="storyContent"
      >
        תוכן העמוד
      </div>
    </div>
  </div>
</div>
`;
